Add UCSC to About Me section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>Hey there! I'm a Software Engineer with a love for building things that make a difference. I graduated with a B.S. in Computer Science (GPA 3.7) and have been diving deep into the world of full-stack development, AR/VR, and Machine Learning.</p>
+                    <p>Hey there! I'm a Software Engineer with a love for building things that make a difference. I graduated from the University of California, Santa Cruz (B.S. in Computer Science, GPA 3.7) and have been diving deep into the world of full-stack development, AR/VR, and Machine Learning.</p>
                     <p>When I'm not coding, you'll find me exploring new technologies, contributing to open-source projects, or experimenting with the latest in AR/VR development. I believe in creating software that not only works well but also provides meaningful experiences for users.</p>
                     <p>I'm always excited to take on new challenges and collaborate with creative teams to build robust, user-centric solutions.</p>
                 </div>
