Add blog section and comprehensive animations/transitions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li><a href="#experience" class="nav-link">Experience</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#skills" class="nav-link">Skills</a></li>
+                    <li><a href="#blog" class="nav-link">Blog</a></li>
                     <li><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
                 <button class="dark-mode-toggle" aria-label="Toggle dark mode">
@@ -249,6 +250,59 @@
                         <span class="skill-tag">MongoDB</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Blog Section -->
+    <section id="blog" class="blog">
+        <div class="container">
+            <h2 class="section-title">Latest Thoughts</h2>
+            <div class="blog-grid">
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <i class="fas fa-vr-cardboard"></i>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-category">AR/VR</span>
+                            <span class="blog-date">June 2024</span>
+                        </div>
+                        <h3 class="blog-title">The Future of Virtual Try-On Technology</h3>
+                        <p class="blog-excerpt">Exploring how AR/VR is revolutionizing the retail experience and what this means for the future of e-commerce...</p>
+                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <i class="fas fa-brain"></i>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-category">Machine Learning</span>
+                            <span class="blog-date">May 2024</span>
+                        </div>
+                        <h3 class="blog-title">Building Recommendation Systems with TensorFlow</h3>
+                        <p class="blog-excerpt">A deep dive into creating personalized recommendation engines and the challenges of implementing ML in production...</p>
+                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </article>
+
+                <article class="blog-card">
+                    <div class="blog-image">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <div class="blog-content">
+                        <div class="blog-meta">
+                            <span class="blog-category">Development</span>
+                            <span class="blog-date">April 2024</span>
+                        </div>
+                        <h3 class="blog-title">Full-Stack Development: Lessons Learned</h3>
+                        <p class="blog-excerpt">Reflections on building scalable applications and the importance of choosing the right tech stack for your project...</p>
+                        <a href="#" class="blog-link">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
