Enhance animations: scroll-triggered, typing effect, smooth transitions, micro-interactions

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li><a href="#about" class="nav-link">About</a></li>
+                    <li><a href="#education" class="nav-link">Education</a></li>
                     <li><a href="#experience" class="nav-link">Experience</a></li>
                     <li><a href="#projects" class="nav-link">Projects</a></li>
                     <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -39,12 +40,12 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero">
+    <section class="hero fade-in-up">
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
                     <h1 class="hero-title">Hi, I'm Evan 👋</h1>
-                    <p class="hero-subtitle">I build things for the web and beyond</p>
+                    <p class="hero-subtitle typing-subtitle">I build things for the web and beyond</p>
                     <p class="hero-description">Software Engineer passionate about creating impactful applications. I love working with AR/VR, Machine Learning, and full-stack development to solve real-world problems.</p>
                     <div class="hero-buttons">
                         <a href="#projects" class="cta-button primary">View My Work</a>
@@ -61,12 +62,13 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="about">
+    <section id="about" class="about slide-in-left">
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-text">
                     <p>Hey there! I'm a Software Engineer with a love for building things that make a difference. I graduated from the University of California, Santa Cruz (B.S. in Computer Science, GPA 3.7) and have been diving deep into the world of full-stack development, AR/VR, and Machine Learning.</p>
+                    <p>Currently serving as a Manager at AT&T, I leverage my analytical skills and technical expertise to enhance operational efficiency and drive innovation. My experience spans from AR/VR development to autonomous driving technologies and comprehensive software solutions.</p>
                     <p>When I'm not coding, you'll find me exploring new technologies, contributing to open-source projects, or experimenting with the latest in AR/VR development. I believe in creating software that not only works well but also provides meaningful experiences for users.</p>
                     <p>I'm always excited to take on new challenges and collaborate with creative teams to build robust, user-centric solutions.</p>
                 </div>
@@ -76,12 +78,37 @@
                         <span class="stat-label">GPA</span>
                     </div>
                     <div class="stat-item">
-                        <span class="stat-number">15%</span>
-                        <span class="stat-label">Engagement Boost</span>
+                        <span class="stat-number">25%</span>
+                        <span class="stat-label">Performance Boost</span>
                     </div>
                     <div class="stat-item">
                         <span class="stat-number">35%</span>
                         <span class="stat-label">Precision Improvement</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Education Section -->
+    <section id="education" class="education slide-in-right">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="education-grid">
+                <div class="education-card">
+                    <div class="education-header">
+                        <div class="education-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <div class="education-info">
+                            <h3 class="degree">B.S. in Computer Science</h3>
+                            <p class="school">University of California, Santa Cruz</p>
+                            <p class="duration">2021 - 2023</p>
+                            <p class="gpa">GPA: 3.70</p>
+                        </div>
+                    </div>
+                    <div class="education-content">
+                        <p>Graduated with honors on Regents Scholarship. Relevant courses included Computer Architecture, Computer Systems Design, Computer Graphics, Artificial Intelligence, Natural Language Processing, and Web Applications.</p>
                     </div>
                 </div>
             </div>
@@ -93,28 +120,51 @@
         <div class="container">
             <h2 class="section-title">What I've Been Up To</h2>
             <div class="experience-grid">
-                <div class="experience-card">
+                <div class="experience-card fade-in-up">
+                    <div class="experience-header">
+                        <div class="experience-icon">
+                            <i class="fas fa-building"></i>
+                        </div>
+                        <div class="experience-info">
+                            <h3 class="job-title">Manager</h3>
+                            <p class="company">AT&T</p>
+                            <p class="duration">Nov. 2023 - Present</p>
+                        </div>
+                    </div>
+                    <div class="experience-content">
+                        <p>Leading team operations and driving improvements in productivity while consistently meeting performance objectives. I enhance customer satisfaction through effective account management and timely issue resolution.</p>
+                        <ul class="achievements">
+                            <li>Led team operations, driving improvements in productivity and consistently meeting performance objectives</li>
+                            <li>Enhanced customer satisfaction through effective account management and timely issue resolution</li>
+                            <li>Contributed to sales growth by developing and implementing successful sales strategies</li>
+                            <li>Analyzed performance metrics, providing insights that improved decision-making and operational efficiency</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="experience-card fade-in-up">
                     <div class="experience-header">
                         <div class="experience-icon">
                             <i class="fas fa-vr-cardboard"></i>
                         </div>
                         <div class="experience-info">
-                            <h3 class="job-title">Software Engineer Intern</h3>
+                            <h3 class="job-title">Software Engineer PT Employee - Remote</h3>
                             <p class="company">Urbanis, Inc.</p>
                             <p class="duration">Nov. 2023 - Jun. 2024</p>
                         </div>
                     </div>
                     <div class="experience-content">
-                        <p>Had an amazing time working on cutting-edge AR/VR features! I got to play with Unity and OpenCV to create virtual try-on experiences that actually work well. The best part? Seeing those engagement metrics go up!</p>
+                        <p>Spearheaded AR/VR development projects, enhancing Urbanis' product capabilities by integrating advanced computer vision technologies. Led a team in pioneering real-time simulation research.</p>
                         <ul class="achievements">
+                            <li>Spearheaded AR/VR development projects, enhancing product capabilities by integrating advanced computer vision technologies</li>
+                            <li>Led a team in pioneering real-time simulation research, contributing to a 25% improvement in application performance</li>
                             <li>Built AR/VR features that improved virtual try-on precision by 35%</li>
                             <li>Optimized simulation performance, cutting load times by 2.5 seconds</li>
-                            <li>Integrated AR solutions that boosted monthly engagement by 15%</li>
                         </ul>
                     </div>
                 </div>
 
-                <div class="experience-card">
+                <div class="experience-card fade-in-up">
                     <div class="experience-header">
                         <div class="experience-icon">
                             <i class="fas fa-gamepad"></i>
@@ -128,9 +178,9 @@
                     <div class="experience-content">
                         <p>This was a really meaningful project! I got to design and develop a VR game specifically for preteens with cleft lip and/or palate. Leading a team of 6 was challenging but incredibly rewarding.</p>
                         <ul class="achievements">
-                            <li>Created a VR game that increased engagement by 30%</li>
-                            <li>Led a team of 6 developers, doubling our efficiency</li>
-                            <li>Conducted research with 100+ participants to improve accessibility</li>
+                            <li>Developed a VR game for preteens with cleft lip and/or palate, leading to a 30% increase in engagement</li>
+                            <li>Collaborated with a team of 6 to design and implement gameplay mechanics, resulting in a 2x faster development cycle</li>
+                            <li>Conducted research involving 100+ individuals with cleft lip and/or palate to address their needs</li>
                         </ul>
                     </div>
                 </div>
@@ -143,7 +193,7 @@
         <div class="container">
             <h2 class="section-title">Some Things I've Built</h2>
             <div class="projects-grid">
-                <div class="project-card">
+                <div class="project-card slide-in-left">
                     <div class="project-header">
                         <div class="project-icon">
                             <i class="fas fa-utensils"></i>
@@ -159,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card slide-in-left">
                     <div class="project-header">
                         <div class="project-icon">
                             <i class="fas fa-shopping-cart"></i>
@@ -174,19 +224,35 @@
                     </div>
                 </div>
 
-                <div class="project-card">
+                <div class="project-card slide-in-left">
                     <div class="project-header">
                         <div class="project-icon">
                             <i class="fab fa-twitter"></i>
                         </div>
                         <h3 class="project-title">Twitter-like Web Application</h3>
                     </div>
-                    <p class="project-description">Created a social media platform with React and Flask, featuring a responsive Vue.js UI. Optimized data retrieval by 30% using PostgreSQL. It's like Twitter, but better (at least I think so!).</p>
+                    <p class="project-description">Developed a mock social media platform analogous to Twitter with user management, posting capabilities, feed selection, "Remeow" feature, and reply system. Leveraged Python for backend operations and Vue.js for the frontend UI.</p>
                     <div class="project-tech">
-                        <span class="tech-tag">React</span>
-                        <span class="tech-tag">Flask</span>
+                        <span class="tech-tag">Python</span>
                         <span class="tech-tag">Vue.js</span>
-                        <span class="tech-tag">PostgreSQL</span>
+                        <span class="tech-tag">py4web</span>
+                        <span class="tech-tag">Git</span>
+                    </div>
+                </div>
+
+                <div class="project-card slide-in-left">
+                    <div class="project-header">
+                        <div class="project-icon">
+                            <i class="fas fa-cogs"></i>
+                        </div>
+                        <h3 class="project-title">Pintos Operating System</h3>
+                    </div>
+                    <p class="project-description">Implemented features within the Pintos operating system framework for the 80x86 architecture. Enhanced thread priority and priority donation mechanisms, integrated locks, conditional variables, and semaphores.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">C</span>
+                        <span class="tech-tag">C++</span>
+                        <span class="tech-tag">Linux</span>
+                        <span class="tech-tag">Git</span>
                     </div>
                 </div>
             </div>
@@ -194,7 +260,7 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="skills">
+    <section id="skills" class="skills fade-in-up">
         <div class="container">
             <h2 class="section-title">Tools & Technologies I Use</h2>
             <div class="skills-grid">
@@ -204,13 +270,15 @@
                         Languages
                     </h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">Java</span>
                         <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">TypeScript</span>
+                        <span class="skill-tag">CSS</span>
+                        <span class="skill-tag">HTML</span>
+                        <span class="skill-tag">Java</span>
                         <span class="skill-tag">Python</span>
                         <span class="skill-tag">C++</span>
                         <span class="skill-tag">C</span>
-                        <span class="skill-tag">Go</span>
+                        <span class="skill-tag">Haskell</span>
+                        <span class="skill-tag">SQL</span>
                     </div>
                 </div>
 
@@ -220,7 +288,9 @@
                         Technologies
                     </h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">HTML/CSS</span>
+                        <span class="skill-tag">THREE.JS</span>
+                        <span class="skill-tag">Vue.js</span>
+                        <span class="skill-tag">py4web</span>
                         <span class="skill-tag">REST API</span>
                         <span class="skill-tag">Spring Boot</span>
                         <span class="skill-tag">Node.js</span>
@@ -238,6 +308,7 @@
                         Tools & Databases
                     </h3>
                     <div class="skill-tags">
+                        <span class="skill-tag">Vim</span>
                         <span class="skill-tag">Git</span>
                         <span class="skill-tag">GitHub</span>
                         <span class="skill-tag">AWS</span>
